ghc-4335c07/testsuite/tests/polykinds/T12055a.stderr

T12055a.hs:27:1: error:
    • Non type-variable argument in the constraint: Category (Dom f)
      (Use FlexibleContexts to permit this)
    • In the context: (Category (Dom f), Category (Cod f))
      While checking the super-classes of class ‘Functor’
      In the class declaration for ‘Functor’
